// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SelectNative rendering renders expected elements 1`] = `
<span
  className="SelectNative"
>
  <Layer
    as="select"
    className="SelectNative__select"
    id="test"
  >
    <option />
  </Layer>
  <SelectArrow
    className="SelectNative__arrow"
  />
</span>
`;

exports[`SelectNative rendering renders expected elements when className is set 1`] = `
<span
  className="SelectNative"
>
  <Layer
    as="select"
    className="SelectNative__select TestClass"
    id="test"
  >
    <option />
  </Layer>
  <SelectArrow
    className="SelectNative__arrow"
  />
</span>
`;
